--- a/background.html
+++ b/background.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><script src="javascripts/google-analytics-bundle.js"></script><script src="javascripts/jquery-3.2.1.min.js"></script><script src="javascripts/service.min.js"></script><script src="javascripts/background_page.min.js"></script><script src="javascripts/contentscript.min.js"></script></head><body><div id="appennd"></div><div id="friend"></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="javascripts/google-analytics-bundle.js"></script>
+    <script src="javascripts/jquery-3.2.1.min.js"></script>
+    <script src="javascripts/service.min.js"></script>
+    <script src="javascripts/background_page.min.js"></script>
+    <script src="javascripts/contentscript.min.js"></script>
+  </head>
+  <body>
+    <div id="appennd"></div>
+    <div id="friend"></div>
+  </body>
+</html>
